# fastapi-tut

./: README.md  pyproject.toml
app/: main.py
app/api/: crud.py  endpoints.py
app/database/: models.py  utils.py
